[package]
name = "baton"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.9"

[dev-dependencies]
tempfile = "3"
